--- a/swagger-ui/index.html
+++ b/swagger-ui/index.html
@@ -18,8 +18,16 @@
   <script src='lib/highlight.7.3.pack.js' type='text/javascript'></script>
   <script type="text/javascript">
     $(function () {
+      var location = window.location
+      var baseUrl = 'http://' + location.host
+
+      var i = location.href.indexOf('api')
+      if (i > -1) { i = location.href.indexOf('/', i) }
+      if (i > -1) { baseUrl = location.href.substring(0, i) }
+
       window.swaggerUi = new SwaggerUi({
-      url: "http://localhost:8002/api-docs",
+      //url: "http://localhost:8002/api-docs",
+	  url: baseUrl + '/api-docs',
       dom_id: "swagger-ui-container",
       supportedSubmitMethods: ['get', 'post', 'put', 'delete'],
       onComplete: function(swaggerApi, swaggerUi){
