updated api:key in index.html

--- a/swagger-ui/index.html
+++ b/swagger-ui/index.html
@@ -50,7 +50,7 @@
       console.log("key: " + key);
       if(key && key.trim() != "") {
         console.log("added key " + key);
-        window.authorizations.add("key", new ApiKeyAuthorization("api_key", key, "query"));
+        window.authorizations.add("key", new ApiKeyAuthorization("apikey", key, "query"));
       }
     })
     window.swaggerUi.load();
