--- a/swagger-ui/index.html
+++ b/swagger-ui/index.html
@@ -18,8 +18,10 @@
   <script src='lib/highlight.7.3.pack.js' type='text/javascript'></script>
   <script type="text/javascript">
     $(function () {
-      var location = window.location
-      var baseUrl = 'http://' + location.host
+      var location = window.location;
+      var protocol= window.location.protocol;
+      //var baseUrl = 'http://' + location.host
+      var baseUrl = protocol+ '//' + location.host
 
       var i = location.href.indexOf('api')
       if (i > -1) { i = location.href.indexOf('/', i) }
